# AI-Automation-Testing-Tool-using-CrewAi

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
backend/: requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Console.tsx  Form.tsx  Header.tsx  Report.tsx  RunTestButton.tsx  Sidebar.tsx
frontend/src/layouts/: Shell.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  NewTest.tsx  RunView.tsx  ScenarioSelect.tsx  TestDetail.tsx  Tests.tsx
src/test_agent/: crew.py  main.py
src/test_agent/config/: agents.yaml  tasks.yaml
src/test_agent/tools/: custom_tool.py
